<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_service"
            android:icon="@drawable/ic_business_center_black_24dp"
            android:title="@string/paid_customer" />

        <item
            android:id="@+id/nav_request_service"
            android:icon="@drawable/ic_unarchive_black_24dp"
            android:title="@string/request_service" />

        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_profile" />

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/contact_us" />


        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/feedback_and_suggestion" />

        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_lock_black_24dp"
            android:title="@string/change_password" />



        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/logout" />

    </group>

<!--    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
