<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#AFAFAF"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!--<include layout="@layout/common_toolbar">-->

    <!--</include>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/white"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_person_outline_white_24dp"
                android:hint="@string/name"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="10"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/white"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_smartphone_white_24dp"
                android:hint="@string/mobile"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                />



            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/white"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
                android:hint="@string/email"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                />



            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/confirmPassword"
                android:textColorHint="@color/white"
                app:backgroundTint="@color/white"
                android:textColor="@color/white"
                />
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:text="@string/btn_signup"
                android:textSize="16sp"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textAllCaps="true"
                />


        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>