<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:background="@color/colorAccent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <!--<include layout="@layout/common_toolbar">-->

    <!--</include>-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColorHint="@color/white"
                    android:drawablePadding="5dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/ic_smartphone_white_24dp"
                    android:hint="@string/mobile"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/tv_send_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/send_otp"
                    android:textSize="16sp"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true"
                    />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_enter_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/enter_otp"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:backgroundTint="@color/white" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_enter_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/new_password"
                    android:textColorHint="@color/white"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    />
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/confirmPassword"
                    android:textColorHint="@color/white"
                    app:backgroundTint="@color/white"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:padding="12dp"
                    android:text="@string/submit"
                    android:textSize="16sp"
                    android:elevation="5dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="true" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>