<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.obabuji.ServiceRequestActivity">


  <Button
      android:id="@+id/btn_request_service"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:background="@color/colorPrimary"
      android:textColor="@android:color/white"
      android:text="@string/request_service"/>

 <ScrollView
     android:layout_above="@id/btn_request_service"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">



<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="5dp"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_digital_marketing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:text="@string/digital_marketing"/>

        <CheckBox
            android:id="@+id/cb_digital_marketing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:buttonTint="@color/colorPrimary"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>


</android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_pay_per_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/pay_per_click_marketing"/>

            <CheckBox
                android:id="@+id/cb_pay_per_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_social_media_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/social_media_marketing"/>

            <CheckBox
                android:id="@+id/cb_social_media_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_youtube_advertising"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/youtube_advertising"/>

            <CheckBox
                android:id="@+id/cb_youtube_advertising"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_mobile_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/mobile_marketing"/>

            <CheckBox
                android:id="@+id/cb_mobile_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_seo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/seo"/>

            <CheckBox
                android:id="@+id/cb_seo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_content_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:text="@string/content_marketing"/>

            <CheckBox
                android:id="@+id/cb_content_marketing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:buttonTint="@color/colorPrimary"
                android:layout_alignParentRight="true"/>


        </RelativeLayout>


    </android.support.v7.widget.CardView>


         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="5dp"
             android:layout_margin="10dp">

             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp">

                 <TextView
                     android:id="@+id/tv_email_marketing"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:textColor="@android:color/black"
                     android:text="@string/email_marketing"/>

                 <CheckBox
                     android:id="@+id/cb_email_marketing"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     app:buttonTint="@color/colorPrimary"
                     android:layout_alignParentRight="true"/>


             </RelativeLayout>


         </android.support.v7.widget.CardView>


         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="5dp"
             android:layout_margin="10dp">

             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp">

                 <TextView
                     android:id="@+id/tv_crm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:textColor="@android:color/black"
                     android:text="@string/crm"/>

                 <CheckBox
                     android:id="@+id/cb_crm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     app:buttonTint="@color/colorPrimary"
                     android:layout_alignParentRight="true"/>


             </RelativeLayout>


         </android.support.v7.widget.CardView>




         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardElevation="5dp"
             android:layout_margin="10dp">


             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:padding="10dp">

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:id="@+id/tv_web_design"
                     android:textColor="@android:color/black"
                     android:text="@string/web_design_development" />

                 <CheckBox
                     android:id="@+id/cb_web_design"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     app:buttonTint="@color/colorPrimary"
                     android:layout_centerVertical="true" />


             </RelativeLayout>


         </android.support.v7.widget.CardView>

     </LinearLayout>

 </ScrollView>



</RelativeLayout>
